--- a/src/components/womenempowerment/Womenempowerment.css
+++ b/src/components/womenempowerment/Womenempowerment.css
@@ -48,7 +48,7 @@
 }
 
 .women-image img {
-  width: 100%;
+  width: 70%;
   max-width: 400px;
   height: 300px;
   border-radius: 10px;
@@ -193,6 +193,7 @@
 
 .women-program img {
   width: 100%;
+  height:400px;
   border-radius: 8px;
   display: block;
   margin-top: 10px;
