--- a/src/components/health/Health.css
+++ b/src/components/health/Health.css
@@ -452,14 +452,14 @@ html {
 
 .container.left-image .styled-img,
 .container-1.left-image .styled-img {
-  margin-right: 30px;
-  margin-left: 0;
+  margin-right: auto;
+  margin-left: auto;
 }
 
 .container.right-image .styled-img,
 .container-1.right-image .styled-img {
-  margin-left: 30px;
-  margin-right: 0;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .container.left-image .box,
@@ -629,6 +629,7 @@ html {
   color: #c00606;
   font-size: 24px; /* slightly smaller on default */
   font-weight: 900;
+  text-align: center;
 }
 
 @media (min-width: 768px) {
