--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -1293,6 +1293,18 @@ body {
     margin-bottom: 70px;
   }
 
+  .hero-promo-video {
+    width: 100%;
+    height: 100%;
+    margin: 90px 80px 50px 0;
+    position: relative;
+    transform: scale(1);
+    object-fit: contain;
+    transition: filter .6s 
+cubic-bezier(.175, .885, .32, 1.275), transform .6s 
+cubic-bezier(.175, .885, .32, 1.275);
+}
+
   .hero-section {
     padding: 30px 40px;
     gap: 24px;
