--- a/src/components/wealth/Wealth.css
+++ b/src/components/wealth/Wealth.css
@@ -169,10 +169,10 @@ body {
 }
 
 .wealthy-text-col h2 {
-  font-size: 25px;
+  font-size: 21.2px;
   color: var(--accent);
   margin-bottom: 0.8rem;
-  text-align: start;
+  text-align: justify;
 }
 
 
