--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -1294,9 +1294,9 @@ body {
   }
 
   .hero-promo-video {
-    width: 100%;
-    height: 100%;
-    margin: 90px 80px 50px 0;
+    width: 500%;
+    height: 140%;
+    margin: 90px 80px 50px 60px;
     position: relative;
     transform: scale(1);
     object-fit: contain;
