--- a/src/components/presidentMsg/PresidentMsg.css
+++ b/src/components/presidentMsg/PresidentMsg.css
@@ -14,7 +14,7 @@
     max-width: 56rem; /* max-w-4xl */
     margin-left: auto;
     margin-right: auto;
-    background-color: white;
+    background-color: rgb(4, 120, 113);
     box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.25); /* shadow-2xl */
     border-radius: 0.75rem; /* rounded-xl */
     overflow: hidden;
