--- a/src/components/presidentMsg/PresidentMsg.css
+++ b/src/components/presidentMsg/PresidentMsg.css
@@ -145,7 +145,7 @@
 
 .signature-title {
     font-size: 1rem;
-    color: #fff; /* text-teal-600 */
+    color: rgb(153, 246, 228); /* text-teal-600 */
 }
 
 .signature {
